# holotagger

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  artists.yaml  db.py  docker-compose.yml  download.py  main.py  metadata.py  pyproject.toml  requirements.txt  settings.py  start.sh
app/: Makefile  index.html  package-lock.json  package.json  script.js
app/ff/: manifest.json
app/src/: helpers.js  main.js
app/static/: style.css
app/templates/: index.html
app/web/: index.html  script.js  style.css
entry/: logging.conf  nginx.conf  prod.sh  start.sh
entry/scripts/: download_yt_thumbnails.py
src/: db.py  dependencies.py  download.py  main.py  metadata.py  schemas.py  settings.py
src/routers/: data.py  download.py
src/tasks/: download.py
