[tool.poetry]
name = "holotagger"
version = "0.0.3"
description = "API for downloading and tagging Hololive karaoke covers"
authors = ["Nick Yu <nickyu42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Misc
PyYAML = "^5.4.1"
python-dotenv = "^0.15.0"
SQLAlchemy = "^1.3.22"
python-slugify = "^4.0.1"

# Song analysis and processing
ffmpeg-python = "^0.2.0"
python-Levenshtein = "^0.12.2"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}
eyed3 = "^0.9.6"
pykakasi = "^2.2.1"

# API and downloading
google-api-python-client = "^1.12.8"
fastapi = "^0.72.0"
uvicorn = "^0.13.3"
aiofiles = "^0.6.0"
websockets = "^10.1"
Jinja2 = "^2.11.3"
yt-dlp = "^2022.2.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
